@@ -23,6 +23,7 @@
                   - added errors/s output
                   - removed -p and -b, added -u/--unit <value>
                   - added max stats (--type,-t and 't')
+                  - added sum stats
   12-20-2004 0.4: pre1:
                   - get_iface_stats cleanup
                   - plain and csv output added
